--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 	<div class="health-bar text-center">Health:
 		<span id='health'>--</span>
 	</div>
+	<div class="enemy text-center">Hits:
+			<span id='hits'>--</span>
+		</div>
 	<div class="enemy-image text-center">
 		<img src="http://via.placeholder.com/200x450">
 	</div>
