game completes mod add ons and original function

--- a/index.html
+++ b/index.html
@@ -1,66 +1,42 @@
 <html>
-
-<head>
-	<title>Slap Object Game</title>
-	<link rel="stylesheet" href="game.css">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ"
-	 crossorigin="anonymous">
-
-</head>
-
-<body>
-	<div class="container">
-		<div class="row">
-			<div class="col-sm-6 participants text-center">
-				<h1>Player</h1>
+	
+		<head>
+			<title>Slap Object Game</title>
+			<link rel="stylesheet" href="game.css">
+			<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ"
+			 crossorigin="anonymous">
+		
+		</head>
+		
+		<body>
+			<div class="health-bar text-center">Health:
+				<span id='health'>--</span>
 			</div>
-			<div class="col-sm-6 participants text-center">
-				<h1>Monster</h1>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-sm-12 text-center status-bar">
-				<div class="player1">
-					<div class="health-bar">Health:
-						<span id='player1-health'>--</span>
-					</div>
-					<div class="enemy">Hits:
-						<span id='player1-hits'>--</span>
-					</div>
+			<div class="enemy text-center">Hits:
+					<span id='hits'>--</span>
 				</div>
-				<div class="monster">
-					<div class="health-bar">Health:
-						<span id='monster-health'>--</span>
-					</div>
-					<div class="enemy">Hits:
-						<span id='monster-hits'>--</span>
-					</div>
-				</div>
+			<div class="enemy-image text-center">
+				<img src="http://via.placeholder.com/200x450">
 			</div>
+			<br>
+			<div class="attack-button text-center">
+				<button onclick="action('slap',monster)">Slap</button>
+				<button onclick="action('punch', monster)">Punch</button>
+				<button onclick="action('kick', monster)">Kick</button>
+			</div>
+		<br>
+		<div class="mod-button text-center">
+			<button onclick="giveItem(monster, 'focus')">Focus</button>
+			<button onclick="giveItem(monster, 'strategy')">Strategy</button>
+			<button onclick="giveItem(monster, 'mental')">Mental Block</button>
 		</div>
-	</div>
-	<div class="enemy-image text-center">
-		<img src="http://via.placeholder.com/200x450">
-		<img src="http://via.placeholder.com/200x450">
-	</div>
-	<br>
-	<div class="attack-button text-center">
-		<button onclick="slap(monster)">Slap</button>
-		<button onclick="punch(monster)">Punch</button>
-		<button onclick="kick(monster)">Kick</button>
-	</div>
-	<br>
-	<div class="mod-button text-center">
-			<button onclick=" ">Heal</button>
-			<button onclick=" ">Shield</button>
-			<button onclick=" ">Helmet</button>
-		</div>
-	<div class="kick-button text-center">
-
-
-
-
-		<script src="game.js"></script>
-</body>
-
-</html>
+	
+	
+		
+		
+		
+		
+				<script src="game.js"></script>
+		</body>
+		
+		</html>
