project mon morning

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 			</div>
 			<div class="col-sm-6">
 				<div class="health-bar text-center health-text">Health:
-					<span id='health'>--</span>
+					<span id='health'>100</span>
 					<div class="enemy text-center">Hits:
-						<span id='hits'>--</span>
+						<span id='hits'>0</span>
 					</div>
 					<br>
 					<div class="attack-button text-center">
