--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html lang="en">
 <html>
 
 <head>
@@ -11,7 +13,7 @@
 <body>
 	<div class="container">
 		<div class="header text-center">
-			<img src="/chextop.png">
+			<img src="/chextop.png" alt=''>
 		</div>
 		<div class="row">
 			<div class="col-xs-12 spacer"></div>
@@ -19,7 +21,7 @@
 		<div class="row">
 			<div class="col-sm-6">
 				<div class="computer text-center">
-					<img src="sovietcomputer.png">
+					<img src="sovietcomputer.png" alt=''>
 				</div>
 			</div>
 			<div class="col-sm-6">
