--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 	<div class="container">
 		<div class="header text-center">
-			<img src="/chextop.png" alt=''>
+			<img src="chextop.png" alt=''>
 		</div>
 		<div class="row">
 			<div class="col-xs-12 spacer"></div>
