--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<div class="row">
 			<div class="col-sm-6">
 				<div class="computer text-center">
-					<img src="sovietcomputer.png" alt=''>
+					<img src="computer.gif" alt=''>
 				</div>
 			</div>
 			<div class="col-sm-6">
