--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				</div>
 			</div>
 			<div class="col-sm-6">
-				<div class="health-bar text-center health-text">Health:
+				<div class="health-bar text-center health-text">CPU Abillity to Win:
 					<span id='health'>100</span>
 					<div class="enemy text-center">Hits:
 						<span id='hits'>0</span>
